public/css/sites/home.css
.home-container {
    height: 100vh;
    display: grid;
    grid-template-areas:
        ". top top ."
        "left main self-portrait right"
        ". bottom bottom .";
    grid-template-columns: 5% 45% 45% 5%;
    grid-template-rows: 10% 80% 10%;
}

#self-portrait {
    border-radius: 40px;
    height: 550px;
    box-shadow: rgba(0, 0, 0, 0.6) 0px 7px, rgba(53, 53, 53, 0.4) 0px 12px, rgba(117, 117, 117, 0.2) 0px 17px, rgba(168, 168, 168, 0.1) 0px 22px, rgba(192, 192, 192, 0.05) 0px 27px;
}
  
@keyframes typing {
    from {
      width: 0
    }
}
      
@keyframes blink {
    50% {
      border-color: transparent
    }
}

.self-portrait {
    grid-area: self-portrait;
}

.main.center-items {
    justify-content: center;
    align-items: center;
}

.self-portrait.center-items {
    justify-content: center;
    align-items: center;
}

@media screen and (max-width: 1024px) {
    #self-portrait {
        border-radius: 40px;
        height: auto;
    }

    .home-container {
        height: 100vh;
        display: grid;
        grid-template-areas:
            "self-portrait self-portrait self-portrait self-portrait"
            "main main main main"
            "left top bottom right";
        grid-template-columns: 25% 25% 25% 25%;
        grid-template-rows: 50% 40% 10%;
    }
}

